feat: account recovery translate

--- a/public/locales/tr/global.json
+++ b/public/locales/tr/global.json
@@ -33,24 +33,34 @@
   "faq_question_7": "Satın aldığım bir kursu beğenmezsem ne olur?",
   "faq_answer_7": "Memnun kalmanızı istiyoruz, böylece Udemy'de satın alınan tüm uygun kurslar 30 gün içinde iade edilebilir. Bir kurstan memnun kalmazsanız, talebin geri ödeme politikamızdaki yönergelere uygun olması koşuluyla geri ödeme talebinde bulunabilirsiniz.",
   "auth_page_title_1": "Senior web tasarımcıları",
-	"auth_page_title_2": "Full-Stack Geliştiriciler",
-	"auth_page_you": "size",
-	"login_title": "Girmek",
-	"login_description": "Sizi tekrar platformumuzda görmekten mutluluk duyuyoruz, daha fazla deneyim kazanmak için giriş yapın!",
-	"login_input_email_label": "e-posta adresiniz",
-	"login_input_password_label": "Şifreniz",
-	"auth_remember_me": "Hatırlamak",
-	"auth_forgot_password": "Parolanızı mı unuttunuz",
-	"login_btn": "Girmek",
-	"login_not_account_yet": "Profiliniz yok mu?",
-	"login_redirect_to_register": "Kayıt",
-	"register_title": "Kayıt",
-	"register_description": "Sizin gibi harika mühendisler arıyoruz! Rock yıldızı mühendislik ekibimizin bir parçası olun ve kariyerinizde fırlayın!",
-	"register_input_confirm_password_label": "Şifreyi Onayla",
-	"register_already_have_account": "Profiliniz var mı?",
-	"register_redirect_to_login": "Girmek",
-	"register_btn": "E-posta Onayı",
-	"verification_title": "Onayla",
-	"verification_description": "Son adım ve neredeyse bitti, e-postanıza gönderdiğimiz e-postayı kontrol edin ve 6 haneli doğrulama kodunu kontrol edin.",
-	"verification_btn": "Kayıt"
+  "auth_page_title_2": "Full-Stack Geliştiriciler",
+  "auth_page_you": "size",
+  "login_title": "Girmek",
+  "login_description": "Sizi tekrar platformumuzda görmekten mutluluk duyuyoruz, daha fazla deneyim kazanmak için giriş yapın!",
+  "login_input_email_label": "e-posta adresiniz",
+  "login_input_password_label": "Şifreniz",
+  "auth_remember_me": "Hatırlamak",
+  "auth_forgot_password": "Parolanızı mı unuttunuz",
+  "login_btn": "Girmek",
+  "login_not_account_yet": "Profiliniz yok mu?",
+  "login_redirect_to_register": "Kayıt",
+  "register_title": "Kayıt",
+  "register_description": "Sizin gibi harika mühendisler arıyoruz! Rock yıldızı mühendislik ekibimizin bir parçası olun ve kariyerinizde fırlayın!",
+  "register_input_confirm_password_label": "Şifreyi Onayla",
+  "register_already_have_account": "Profiliniz var mı?",
+  "register_redirect_to_login": "Girmek",
+  "register_btn": "E-posta Onayı",
+  "verification_title": "Onayla",
+  "verification_description": "Son adım ve neredeyse bitti, e-postanıza gönderdiğimiz e-postayı kontrol edin ve 6 haneli doğrulama kodunu kontrol edin.",
+  "verification_btn": "Kayıt",
+  "or": "VEYA",
+  "account_recovery_title_form1": "Profili geri yükle",
+  "account_recovery_description_form1": "Profil şifrenizi unuttunuz. Endişelenme. Sammy'nin ekibi bu sorunu çözmenize yardımcı olacaktır. Aşağıdaki adımları takip et.",
+  "account_recovery_btn_form1": "OTP gönder",
+  "account_recovery_title_form2": "E-posta Onayla",
+  "account_recovery_description_form2": "E-postanıza 6 haneli bir otp doğrulama kodu gönderdik.",
+  "account_recovery_btn_form2": "Onayla",
+  "account_recovery_title_form3": "Yeni Şifre",
+  "account_recovery_description_form3": "Hesabı iade etmek ve kurslarımızdan ve hizmetlerimizden yararlanmak için son adım.",
+  "account_recovery_btn_form3": "gönderme"
 }
