--- a/public/locales/en/global.json
+++ b/public/locales/en/global.json
@@ -33,24 +33,34 @@
   "faq_question_7": "What if I don’t like a course I purchased?",
   "faq_answer_7": "We want you to be satisfied, so all eligible courses purchased on Udemy can be refunded within 30 days. If you are unhappy with a course, you can request a refund, provided the request meets the guidelines in our refund policy.",
   "auth_page_title_1": "Senior web designers",
-	"auth_page_title_2": "Full-Stack Developers",
-	"auth_page_you": "you",
-	"login_title": "Login",
-	"login_description": "We’re happy to see you again on our platform, for getting more experience please sign in on your account!",
-	"login_input_email_label": "Email address",
-	"login_input_password_label": "Password",
-	"auth_remember_me": "Remember me",
-	"auth_forgot_password": "Forgot password",
-	"login_btn": "Login",
-	"login_not_account_yet": "Not account yet?",
-	"login_redirect_to_register": "Register",
-	"register_title": "Register",
-	"register_description": "We’re looking for amazing engineers just like you! Become a part of our rockstar engineering team and skyrocket your career!",
-	"register_input_confirm_password_label": "Confirm Password",
-	"register_already_have_account": "Already have an account?",
-	"register_redirect_to_login": "Login",
-	"register_btn": "Verify email",
-	"verification_title": "Verification",
-	"verification_description": "The last step and it almost done, just check your email we sent to your email otp verification code with 6 digits number.",
-	"verification_btn": "Register"
+  "auth_page_title_2": "Full-Stack Developers",
+  "auth_page_you": "you",
+  "login_title": "Login",
+  "login_description": "We’re happy to see you again on our platform, for getting more experience please sign in on your account!",
+  "login_input_email_label": "Email address",
+  "login_input_password_label": "Password",
+  "auth_remember_me": "Remember me",
+  "auth_forgot_password": "Forgot password",
+  "login_btn": "Login",
+  "login_not_account_yet": "Not account yet?",
+  "login_redirect_to_register": "Register",
+  "register_title": "Register",
+  "register_description": "We’re looking for amazing engineers just like you! Become a part of our rockstar engineering team and skyrocket your career!",
+  "register_input_confirm_password_label": "Confirm Password",
+  "register_already_have_account": "Already have an account?",
+  "register_redirect_to_login": "Login",
+  "register_btn": "Verify email",
+  "verification_title": "Verification",
+  "verification_description": "The last step and it almost done, just check your email we sent to your email otp verification code with 6 digits number.",
+  "verification_btn": "Register",
+  "or": "OR",
+  "account_recovery_title_form1": "Account Recovery",
+  "account_recovery_description_form1": "You forgot password from your account. Don't worry about it. Sammi team can help you solve that problem. Just follow steps below.",
+  "account_recovery_btn_form1": "Send OTP",
+  "account_recovery_title_form2": "Verify email",
+  "account_recovery_description_form2": "We sent to your email otp verification code with 6 digits number.",
+  "account_recovery_btn_form2": "Verify",
+  "account_recovery_title_form3": "New password",
+  "account_recovery_description_form3": "Last step to return account and enjoy our courses and services.",
+  "account_recovery_btn_form3": "Submit"
 }
