--- a/public/locales/ru/global.json
+++ b/public/locales/ru/global.json
@@ -33,24 +33,34 @@
   "faq_question_7": "Что, если мне не понравится купленный курс?",
   "faq_answer_7": "Мы хотим, чтобы вы были довольны, поэтому все подходящие курсы, приобретенные на Udemy, могут быть возвращены в течение 30 дней. Если вы недовольны курсом, вы можете запросить возврат средств при условии, что запрос соответствует рекомендациям нашей политики возврата средств.",
   "auth_page_title_1": "Senior веб-дизайнеры",
-	"auth_page_title_2": "Full-Stack Разработчики",
-	"auth_page_you": "вы",
-	"login_title": "Войти",
-	"login_description": "Мы рады видеть вас снова на нашей платформе, чтобы получить больше опыта, пожалуйста, войдите в свою учетную запись!",
-	"login_input_email_label": "Адрес электронной почты",
-	"login_input_password_label": "Пароль",
-	"auth_remember_me": "Запомнить меня",
-	"auth_forgot_password": "Забыли пароль",
-	"login_btn": "Войти",
-	"login_not_account_yet": "Еще нет аккаунта?",
-	"login_redirect_to_register": "Зарегистрироваться",
-	"register_title": "Зарегистрироваться",
-	"register_description": "Мы ищем таких же замечательных инженеров, как и вы! Станьте частью нашей рок-звездной команды инженеров и сделайте карьеру!",
-	"register_input_confirm_password_label": "Подтвердите пароль",
-	"register_already_have_account": "У вас уже есть аккаунт?",
-	"register_redirect_to_login": "Войти",
-	"register_btn": "Подтвердить Email",
-	"verification_title": "Проверка",
-	"verification_description": "Последний шаг, и это почти сделано, просто проверьте свою электронную почту, которую мы отправили на вашу электронную почту проверочный код otp с 6-значным номером.",
-	"verification_btn": "Зарегистрироваться"
+  "auth_page_title_2": "Full-Stack Разработчики",
+  "auth_page_you": "вы",
+  "login_title": "Войти",
+  "login_description": "Мы рады видеть вас снова на нашей платформе, чтобы получить больше опыта, пожалуйста, войдите в свою учетную запись!",
+  "login_input_email_label": "Адрес электронной почты",
+  "login_input_password_label": "Пароль",
+  "auth_remember_me": "Запомнить меня",
+  "auth_forgot_password": "Забыли пароль",
+  "login_btn": "Войти",
+  "login_not_account_yet": "Еще нет аккаунта?",
+  "login_redirect_to_register": "Зарегистрироваться",
+  "register_title": "Зарегистрироваться",
+  "register_description": "Мы ищем таких же замечательных инженеров, как и вы! Станьте частью нашей рок-звездной команды инженеров и сделайте карьеру!",
+  "register_input_confirm_password_label": "Подтвердите пароль",
+  "register_already_have_account": "У вас уже есть аккаунт?",
+  "register_redirect_to_login": "Войти",
+  "register_btn": "Подтвердить Email",
+  "verification_title": "Проверка",
+  "verification_description": "Последний шаг, и это почти сделано, просто проверьте свою электронную почту, которую мы отправили на вашу электронную почту проверочный код otp с 6-значным номером.",
+  "verification_btn": "Зарегистрироваться",
+  "or": "ИЛИ",
+  "account_recovery_title_form1": "Восстановление аккаунта",
+  "account_recovery_description_form1": "Вы забыли пароль от своего аккаунта. Не беспокойтесь об этом. Команда Sammi может помочь вам решить эту проблему. Просто следуйте инструкциям ниже.",
+  "account_recovery_btn_form1": "Отправить OTP",
+  "account_recovery_title_form2": "Подтвердить Email",
+  "account_recovery_description_form2": "Мы отправили на вашу электронную почту проверочный код otp с 6-значным номером.",
+  "account_recovery_btn_form2": "Проверять",
+  "account_recovery_title_form3": "Новый пароль",
+  "account_recovery_description_form3": "Последний шаг, чтобы вернуть аккаунт и пользоваться нашими курсами и услугами.",
+  "account_recovery_btn_form3": "Отправлять"
 }
